# Clique

./: .gitmodules  CMakeLists.txt  README  README.md  TODO  build.html  core.html  genindex.html  graph.html  index.html  indices.html  intro.html  io.html  numeric.html  objects.inv  search.html  searchindex.js  sparse_matrix.html  symbolic.html
_sources/: build.txt  core.txt  graph.txt  index.txt  indices.txt  intro.txt  io.txt  numeric.txt  sparse_matrix.txt  symbolic.txt
_sources/core/: dist_graph.txt  dist_map.txt  dist_multi_vec.txt  dist_multi_vector.txt  dist_sparse_matrix.txt  dist_vector.txt  environment.txt  graph.txt  map.txt  multi_vec.txt  multi_vector.txt  sparse_matrix.txt  vector.txt
_sources/numeric/: data_structures.txt  dist_sparse_matrix.txt  factorization.txt  front_tree.txt  multiplication.txt  solve.txt  solve_data_structures.txt  sparse_matrix.txt  supernodal.txt
_sources/symbolic/: analysis.txt  data_structures.txt  nested_dissection.txt
cmake/: clique_sub.cmake  cliqvariables.cmake  config.h.cmake
cmake/toolchains/: BGP-Intrepid-xl.cmake  BGP-Shaheen-xl.cmake  BGP-xl_apr2011-essl_4.3.1-1.cmake  Ranger-gcc_4.4-mvapich2_1.2-mkl_10.0.1.014.cmake  Ranger-gcc_4.4-mvapich_1.0.1-mkl_10.0.1.014.cmake  Ranger-intel_10.1-mvapich2_1.2-mkl_10.0.1.014.cmake  Ranger-intel_10.1-mvapich_1.0.1-mkl_10.0.1.014.cmake
core/: dist_graph.html  dist_map.html  dist_multi_vec.html  dist_multi_vector.html  dist_sparse_matrix.html  dist_vector.html  environment.html  graph.html  map.html  multi_vec.html  multi_vector.html  sparse_matrix.html  vector.html
doc/: Makefile  make.bat
doc/source/: build.rst  conf.py  core.rst  index.rst  intro.rst  io.rst  numeric.rst  symbolic.rst
doc/source/core/: dist_graph.rst  dist_map.rst  dist_multi_vec.rst  dist_multi_vector.rst  dist_sparse_matrix.rst  dist_vector.rst  environment.rst  graph.rst  map.rst  multi_vec.rst  multi_vector.rst  vector.rst
doc/source/numeric/: factorization.rst  front_tree.rst  multiplication.rst  solve.rst  sparse_matrix.rst
doc/source/symbolic/: analysis.rst  data_structures.rst  dist_graph.rst  graph.rst  nested_dissection.rst
examples/: HelmholtzDirichlet2D.cpp  HelmholtzDirichlet3D.cpp  HelmholtzPML2D.cpp  HelmholtzPML3D.cpp
include/: clique.hpp
include/clique/: config.h.cmake  dist_dense_symm_matrix.hpp  environment.hpp  imports.hpp
include/clique/core/: dist_graph.hpp  dist_graph_decl.hpp  dist_graph_impl.hpp  dist_graph_main.hpp  dist_map_decl.hpp  dist_map_impl.hpp  dist_multi_vec_decl.hpp  dist_multi_vec_impl.hpp  dist_multi_vector_decl.hpp  dist_multi_vector_impl.hpp  dist_sparse_matrix_decl.hpp  dist_sparse_matrix_impl.hpp  dist_sparse_matrix_main.hpp  dist_vector_decl.hpp  dist_vector_impl.hpp  environment.hpp  environment_decl.hpp  environment_impl.hpp  graph.hpp  graph_decl.hpp  graph_impl.hpp  multi_vec_decl.hpp  multi_vec_impl.hpp  multi_vector_decl.hpp  multi_vector_impl.hpp  sparse_matrix.hpp  sparse_matrix_decl.hpp  sparse_matrix_impl.hpp  vector_decl.hpp  vector_impl.hpp
include/clique/factor/: ldl.hpp
include/clique/imports/: blas.hpp  lapack.hpp  mpi.hpp
include/clique/io/: Display.hpp  Print.hpp
include/clique/numeric/: 1  block_ldl.hpp  block_ldl_solve.hpp  block_lower_solve.hpp  change_front_type.hpp  diagonal_solve.hpp  dist_front_block_ldl.hpp  dist_front_fast_lower_solve.hpp  dist_front_lower_multiply.hpp  dist_front_lower_solve.hpp  dist_front_tree_decl.hpp  dist_front_tree_impl.hpp  dist_ldl.hpp  dist_lower_multiply.hpp  dist_lower_solve.hpp  dist_nodal_matrix_decl.hpp  dist_nodal_matrix_impl.hpp  dist_nodal_multi_vec_decl.hpp  dist_nodal_multi_vec_impl.hpp  dist_nodal_multi_vector_decl.hpp  dist_nodal_multi_vector_impl.hpp  dist_nodal_vector.hpp  dist_nodal_vector_decl.hpp  dist_nodal_vector_impl.hpp  dist_nodal_vector_main.hpp  dist_sparse_matrix.hpp  dist_sparse_matrix_main.hpp  dist_symm_front_tree.hpp  dist_symm_front_tree_decl.hpp  dist_symm_front_tree_impl.hpp  dist_vector.hpp  dist_vector_main.hpp  front_diagonal_solve.hpp  front_ldl.hpp  front_ldl_solve.hpp  front_lower_multiply.hpp  front_lower_solve.hpp  ldl.hpp  ldl_solve.hpp  local_front_block_ldl.hpp  (+16 more)
include/clique/symbolic/: dist_graph.hpp  dist_graph_main.hpp  dist_separator_tree.hpp  dist_symm_info.hpp  (+8 more)
numeric/: data_structures.html  dist_sparse_matrix.html  factorization.html  factorization_data_structures.html  front_tree.html  multiplication.html  solve.html  solve_data_structures.html  sparse_matrix.html  supernodal.html
src/: DistDenseSymmMatrix.cpp  Environment.cpp
src/core/: DistDenseSymmMatrix.cpp  Environment.cpp  global.cpp
src/factor/: LDL.cpp
src/imports/: blas.cpp  lapack.cpp  mpi.cpp
src/metis/: Bisect.c  CMakeLists.txt
src/numeric/: DistDiagonalSolve.cpp  DistFrontDiagonalSolve.cpp  DistFrontFastLowerSolve.cpp  DistFrontLDL.cpp  DistFrontLDLSolve.cpp  DistFrontLowerMultiply.cpp  DistFrontLowerSolve.cpp  DistLDL.cpp  DistLDLSolve.cpp  DistLowerMultiply.cpp  DistLowerSolve.cpp  DistSupernodeLDL.cpp  DistSupernodeLDLSolve.cpp  LocalDiagonalSolve.cpp  LocalFrontDiagonalSolve.cpp  LocalFrontLDL.cpp  LocalFrontLDLSolve.cpp  LocalFrontLowerMultiply.cpp  LocalFrontLowerSolve.cpp  LocalLDL.cpp  LocalLDLSolve.cpp  LocalLowerMultiply.cpp  LocalLowerSolve.cpp  LocalSupernodeLDL.cpp  LocalSupernodeLDLSolve.cpp  SetSolveMode.cpp  SupernodeLDL.cpp  SupernodeLDLSolve.cpp  SupernodeSolve.cpp
src/parmetis/: CMakeLists.txt
src/symbolic/: BottomSymmetricFactorization.cpp  DistSymmetricAnalysis.cpp  DistSymmetricFactorization.cpp  LocalSymmetricAnalysis.cpp  LocalSymmetricFactorization.cpp  TopSymmetricFactorization.cpp
symbolic/: analysis.html  data_structures.html  dist_graph.html  graph.html  nested_dissection.html
tests/: Bisection.cpp  DistDenseSymmMatrix.cpp  DistSparseMatrix.cpp  FileSpeed.cpp  MultiVector.cpp  MultiVectorSolve.cpp  NaturalSolve.cpp  NaturalVectorSolve.cpp  NestedDissection.cpp  PanelBlockLDL.cpp  PanelLDL.cpp  Refactor.cpp  SimpleMultiVectorSolve.cpp  SimpleSolve.cpp  SimpleVectorSolve.cpp  Solve.cpp  SolveRange.cpp  VectorSolve.cpp  Version.cpp
(+62 files in other folders)
